# c_interpeter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/ast/: ast_node.hpp  expression.hpp  statement.hpp
include/core/: builtins.hpp  error_report.hpp  keywords.hpp  overloaded.hpp  scoped_map.hpp  token.hpp  token_types.hpp  type.hpp
include/core/error/: error_codes.def  error_codes.hpp  error_report.hpp
include/core/token/: keywords.hpp  token.hpp  token_types.hpp
include/core/utils/: builtins.hpp  overloaded.hpp  scoped_map.hpp
include/debug/: debug.hpp
include/lexer/: lexer.hpp
include/parser/: parser.hpp
include/runtime/: environment.hpp  interpreter.hpp  value.hpp
include/semantics/: symbol_table.hpp  type_check.hpp
samples/: CMakeLists.txt  crush_test.c  fib.c  leibniz.c  main.cpp  monte_carlo.c  prime.c  print.c  print_test.c  test1.c
src/: CMakeLists.txt  main.cpp
src/ast/: expression.cpp  statement.cpp
src/core/: builtins.cpp  error_report.cpp  keywords.cpp  token.cpp  type.cpp
src/core/error/: error_report.cpp
src/core/token/: keywords.cpp  token.cpp  token_types.cpp
src/core/utils/: builtins.cpp
src/debug/: debug.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
src/runtime/: environment.cpp  interpreter.cpp  value.cpp
src/semantics/: symbol_table.cpp  type_check.cpp
